<resources>
    <string name="app_name">Shipper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_request">Request</string>
    <string name="nav_response">Response</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_share">Share</string>
    <string name="nav_info">About</string>
    <string name="nav_help">Help</string>
    <string name="nav_message">Message</string>

</resources>
